--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,10 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build
+      - run: ls -la dist && cat dist/index.html
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: ./dist
 
   deploy:
     needs: build
