--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,13 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run build
-      - run: ls -la dist && cat dist/index.html
+      - name: Copy prototypes to dist
+        run: |
+          if [ -d "prototypes" ]; then
+            cp -r prototypes dist/
+            echo "Prototypes included:"
+            ls -la dist/prototypes/ || true
+          fi
       - uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
