--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,7 @@
 
 [functions]
   directory = "netlify/functions"
+  external_node_modules = ["@libsql/client"]
 
 # API route for share function
 [[redirects]]
